--- a/olive/gui/backend/qt/devicehub/view.ui
+++ b/olive/gui/backend/qt/devicehub/view.ui
@@ -6,12 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1115</width>
-    <height>792</height>
+    <width>379</width>
+    <height>285</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Device Hub</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">#device_hub { border: 0px }</string>
   </property>
   <layout class="QGridLayout" name="device_hub_main">
    <property name="leftMargin">
@@ -34,27 +37,17 @@
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
-     <property name="opaqueResize">
-      <bool>false</bool>
-     </property>
      <property name="handleWidth">
-      <number>0</number>
+      <number>2</number>
      </property>
      <property name="childrenCollapsible">
       <bool>false</bool>
      </property>
      <widget class="QTreeWidget" name="devices">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>480</width>
-        <height>0</height>
-       </size>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
       </property>
       <property name="frameShape">
        <enum>QFrame::NoFrame</enum>
@@ -66,7 +59,7 @@
        <number>0</number>
       </property>
       <attribute name="headerVisible">
-       <bool>true</bool>
+       <bool>false</bool>
       </attribute>
       <column>
        <property name="text">
@@ -94,18 +87,25 @@
        </property>
       </item>
      </widget>
-     <widget class="QWidget" name="parameters" native="true">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-        <horstretch>1</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
+     <widget class="ParameterTree" name="parameters" native="true">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
       </property>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ParameterTree</class>
+   <extends>QWidget</extends>
+   <header>pyqtgraph.parametertree</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
