--- a/olive/ui/backend/qt/devicehub/view.ui
+++ b/olive/ui/backend/qt/devicehub/view.ui
@@ -10,6 +10,11 @@
     <height>285</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Device Hub</string>
   </property>
@@ -34,6 +39,11 @@
    </property>
    <item row="0" column="0">
     <widget class="QSplitter" name="splitter">
+     <property name="font">
+      <font>
+       <family>Arial</family>
+      </font>
+     </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -44,12 +54,6 @@
       <bool>false</bool>
      </property>
      <widget class="QTreeWidget" name="device_list">
-      <property name="font">
-       <font>
-        <family>MS Shell Dlg 2</family>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
       <property name="frameShape">
        <enum>QFrame::NoFrame</enum>
       </property>
@@ -143,13 +147,7 @@
        </item>
       </item>
      </widget>
-     <widget class="ParameterTree" name="parameters" native="true">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-     </widget>
+     <widget class="ParameterTree" name="parameters" native="true"/>
     </widget>
    </item>
   </layout>
