--- a/olive/gui/workspace/protocol_editor/view.ui
+++ b/olive/gui/workspace/protocol_editor/view.ui
@@ -102,7 +102,7 @@
              <string notr="true"/>
             </property>
             <property name="icon">
-             <iconset resource="../resources/resources.qrc">
+             <iconset resource="../../resources/resources.qrc">
               <normaloff>:/protocol_editor/create</normaloff>:/protocol_editor/create</iconset>
             </property>
             <property name="iconSize">
@@ -125,7 +125,7 @@
              <string>...</string>
             </property>
             <property name="icon">
-             <iconset resource="../resources/resources.qrc">
+             <iconset resource="../../resources/resources.qrc">
               <normaloff>:/protocol_editor/open</normaloff>:/protocol_editor/open</iconset>
             </property>
             <property name="iconSize">
@@ -148,7 +148,7 @@
              <string>...</string>
             </property>
             <property name="icon">
-             <iconset resource="../resources/resources.qrc">
+             <iconset resource="../../resources/resources.qrc">
               <normaloff>:/protocol_editor/duplicate</normaloff>:/protocol_editor/duplicate</iconset>
             </property>
             <property name="iconSize">
@@ -171,7 +171,7 @@
              <string>...</string>
             </property>
             <property name="icon">
-             <iconset resource="../resources/resources.qrc">
+             <iconset resource="../../resources/resources.qrc">
               <normaloff>:/protocol_editor/save</normaloff>:/protocol_editor/save</iconset>
             </property>
             <property name="iconSize">
@@ -254,7 +254,7 @@
                   <string notr="true"/>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources/resources.qrc">
+                  <iconset resource="../../resources/resources.qrc">
                    <normaloff>:/protocol_editor/edit</normaloff>:/protocol_editor/edit</iconset>
                  </property>
                  <property name="iconSize">
@@ -290,7 +290,7 @@
                   <string notr="true"/>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources/resources.qrc">
+                  <iconset resource="../../resources/resources.qrc">
                    <normaloff>:/protocol_editor/edit</normaloff>:/protocol_editor/edit</iconset>
                  </property>
                  <property name="iconSize">
@@ -387,7 +387,7 @@
 Lightsheet</string>
                </property>
                <property name="icon">
-                <iconset resource="../resources/resources.qrc">
+                <iconset resource="../../resources/resources.qrc">
                  <normaloff>:/protocol_editor/bessel_deactivate</normaloff>
                  <normalon>:/protocol_editor/bessel_activate</normalon>:/protocol_editor/bessel_deactivate</iconset>
                </property>
@@ -420,7 +420,7 @@ Lightsheet</string>
 Lightsheet</string>
                </property>
                <property name="icon">
-                <iconset resource="../resources/resources.qrc">
+                <iconset resource="../../resources/resources.qrc">
                  <normaloff>:/protocol_editor/lattice_deactivate</normaloff>
                  <normalon>:/protocol_editor/lattice_activate</normalon>:/protocol_editor/lattice_deactivate</iconset>
                </property>
@@ -648,7 +648,7 @@ Lightsheet</string>
                    <string notr="true"/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../resources/resources.qrc">
+                   <iconset resource="../../resources/resources.qrc">
                     <normaloff>:/protocol_editor/add</normaloff>:/protocol_editor/add</iconset>
                   </property>
                   <property name="iconSize">
@@ -668,7 +668,7 @@ Lightsheet</string>
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../resources/resources.qrc">
+                   <iconset resource="../../resources/resources.qrc">
                     <normaloff>:/protocol_editor/remove</normaloff>:/protocol_editor/remove</iconset>
                   </property>
                   <property name="iconSize">
@@ -744,7 +744,7 @@ Lightsheet</string>
                    <string notr="true"/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../resources/resources.qrc">
+                   <iconset resource="../../resources/resources.qrc">
                     <normaloff>:/protocol_editor/move_up</normaloff>:/protocol_editor/move_up</iconset>
                   </property>
                   <property name="iconSize">
@@ -764,7 +764,7 @@ Lightsheet</string>
                    <string notr="true"/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../resources/resources.qrc">
+                   <iconset resource="../../resources/resources.qrc">
                     <normaloff>:/protocol_editor/move_down</normaloff>:/protocol_editor/move_down</iconset>
                   </property>
                   <property name="iconSize">
@@ -970,7 +970,7 @@ Lightsheet</string>
                    <string notr="true"/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../resources/resources.qrc">
+                   <iconset resource="../../resources/resources.qrc">
                     <normaloff>:/protocol_editor/link</normaloff>:/protocol_editor/link</iconset>
                   </property>
                   <property name="iconSize">
@@ -990,7 +990,7 @@ Lightsheet</string>
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../resources/resources.qrc">
+                   <iconset resource="../../resources/resources.qrc">
                     <normaloff>:/protocol_editor/unlink</normaloff>:/protocol_editor/unlink</iconset>
                   </property>
                   <property name="iconSize">
@@ -1023,7 +1023,7 @@ Lightsheet</string>
                    <string notr="true"/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../resources/resources.qrc">
+                   <iconset resource="../../resources/resources.qrc">
                     <normaloff>:/protocol_editor/refresh</normaloff>:/protocol_editor/refresh</iconset>
                   </property>
                   <property name="iconSize">
@@ -1100,7 +1100,7 @@ Lightsheet</string>
   </layout>
  </widget>
  <resources>
-  <include location="../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
