--- a/olive/gui/workspace/device_hub/view.ui
+++ b/olive/gui/workspace/device_hub/view.ui
@@ -128,6 +128,9 @@
          <property name="lineWidth">
           <number>0</number>
          </property>
+         <property name="rootIsDecorated">
+          <bool>true</bool>
+         </property>
          <property name="uniformRowHeights">
           <bool>true</bool>
          </property>
@@ -136,7 +139,7 @@
          </attribute>
          <column>
           <property name="text">
-           <string>Device</string>
+           <string>Item</string>
           </property>
          </column>
          <item>
